# photosorter

./: .gitignore  GITHUB_GUIDE.md  README.md  RELEASE_GUIDE.md  WEBVIEW2_INSTALL.md  commit-phases.md  create-commits.ps1  index.html  package-lock.json  package.json  vite.config.ts
releases/: README.txt
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
